--- a/pom.xml
+++ b/pom.xml
@@ -209,15 +209,15 @@
         <version>2.10</version>
         <configuration>
           <failsOnError>true</failsOnError>
-          <configLocation>checkstyle.xml</configLocation>
-          <consoleOutput>true</consoleOutput>
-          <excludes>com/squareup/spoon/axmlparser/**</excludes>
+          <configLocation>${basedir}/checkstyle.xml</configLocation>
+          
         </configuration>
         <executions>
           <execution>
+             <id>checkstyle</id>
             <phase>verify</phase>
             <goals>
-              <goal>checkstyle</goal>
+              <goal>check</goal>
             </goals>
           </execution>
         </executions>
